--- a/2022/November/16.md
+++ b/2022/November/16.md
@@ -14,4 +14,10 @@
     - New Joiners
     - Team Building last Friday (11/12/2022)
     - Referral Program (slots left)
+* Q4 Town Hall: ING Hubs PH
+    - IBSS to ING Hubs (name change)
+    - Q4 Review
+    - Interview with other ING Hubs in Slovakia, Romania, and Poland
+    - 2022 Events
+    - One Ayala tower
 ---
