--- a/2022/November/18.md
+++ b/2022/November/18.md
@@ -3,6 +3,7 @@
 ---
 ## Summary:
 
-* Setup Rust environment for studying
+* Rust
+    - Setup Rust environment for studying
 * Obtain TIN ID and had it laminated
 ---
