--- a/2022/November/21.md
+++ b/2022/November/21.md
@@ -10,7 +10,7 @@
         - Holiday Dec 8
     - Year-end party on Dec 5
     - Transfer to Ayala tower
-* Rust
+* Rust by example
     - complete environment setup
-    - Display Formatting
+    - Display basics
 ---
