--- a/2022/November/22.md
+++ b/2022/November/22.md
@@ -6,4 +6,6 @@
 * Rust by example
     - Implement Debug and Display
 * Pulse Check
+* Team Building
+    - got 500 gcash voucher for the raffle prize
 ---
