--- a/2022/November/30.md
+++ b/2022/November/30.md
@@ -9,5 +9,5 @@
     - routing
     - approval/reject flow
     - compose/send email
-    - finished MyTown application exercise
+    - finished LCAB
 ---
