add Module and Challenge tags

--- a/2022/December/12.md
+++ b/2022/December/12.md
@@ -4,14 +4,15 @@
 ## Summary:
 
 - Self-paced training
-    * Low-code App Builder
-        - Designing a case life cyle (challenge)
-        - User guidance
-        - Setting case status (challenge)
-        - Enforcing service-level agreements (challenge)
-        - The data model
-        - Creating a data model
-        - Capturing and presenting data
+    * Low-code App Builder (`M`odule | `C`hallenge)
+        - `C` Designing a case life cyle
+        - `M` User guidance
+        - `C` Setting case status
+        - `M` Completing work on time
+        - `C` Enforcing service-level agreements
+        - `M` The data model
+        - `C` Creating a data model
+        - `M` Capturing and presenting data
 ---
 
 ## Notes:
