--- a/2022/December/13.md
+++ b/2022/December/13.md
@@ -3,10 +3,13 @@
 ---
 ## Summary:
 
+- Daily standup
+    * quick quiz because of time constraint
+    * check module progression
 - Self-paced training
-    * Low-code App Builder
-        - Adding fields to view
-        - Creating a data relationship (Module & Challenge)
-        - Routing assignments to user (Module & Challenge)
-        - Designing an approval process (Module & Challenge)
+    * Low-code App Builder (`M`odule | `C`hallenge)
+        - `C` Adding fields to view
+        - `MC` Creating a data relationship
+        - `MC` Routing assignments to user
+        - `MC` Designing an approval process
 ---
