--- a/2022/December/14.md
+++ b/2022/December/14.md
@@ -9,11 +9,11 @@
         - Mission exercise
         - Mission test
     * Low-code App Builder Extended
-        - Managing application development
-        - Refining an agile workbench backlog
-        - Sizing a PEGA platform project (Module & Challenge)
-        - Adding optional actions to workflow (Module & Challenge)
-        - Automating workflow decisions (Module & Challenge)
-        - Automation shapes in the case life cycle
-        - Attaching PDF files to a case
+        - `M` Managing application development
+        - `C` Refining an agile workbench backlog
+        - `MC` Sizing a PEGA platform project
+        - `MC` Adding optional actions to workflow
+        - `MC` Automating workflow decisions
+        - `M` Automation shapes in the case life cycle
+        - `C` Attaching PDF files to a case
 ---
