--- a/2022/December/9.md
+++ b/2022/December/9.md
@@ -7,9 +7,9 @@
     * Training experience
     * Core structure of the training with Steve
     * Plans for the next weeks
-- PEGA Academy
-    * Low-code App Builder
-        - Low-code defined
-        - Defining a customer microjourney
-        - PEGA UX Solutions
+- Self-paced training
+    * Low-code App Builder (`M`odule | `C`hallenge)
+        - `M` Low-code defined
+        - `M` Defining a customer microjourney
+        - `M` PEGA UX Solutions
 ---
