--- a/2022/December/15.md
+++ b/2022/December/15.md
@@ -8,10 +8,11 @@
     * Menti quizzes
         - Day 2 quizzes
         - Batch 1's day 1-3 quizzes
+    * check module progression
 - Self-paced training
     * Low-code App Builder Extended
-        - Creating a child case (Module & Challenge)
-        - Identifying a duplicate case (Module & Challenge)
-        - Pausing and resuming case processing (Module & Challenge)
+        - `MC` Creating a child case
+        - `MC` Identifying a duplicate case
+        - `MC` Pausing and resuming case processing
 - Lunch with Peter in Din tai fung
 ---
