--- a/2022/December/7.md
+++ b/2022/December/7.md
@@ -1,7 +1,6 @@
 # Work Diary (12/07/2022)
 
----
-
+## Summary
 - Training
     * customizing view in runtime
     * picklist values
@@ -11,4 +10,3 @@
     * accessibility features
     * simulating data
     * integrating external data source (country flags)
----
