--- a/2022/December/12.md
+++ b/2022/December/12.md
@@ -2,16 +2,16 @@
 
 ## Summary:
 
-- Self-paced training
-    * Low-code App Builder (`M`odule | `C`hallenge)
-        - `C` Designing a case life cyle
-        - `M` User guidance
-        - `C` Setting case status
-        - `M` Completing work on time
-        - `C` Enforcing service-level agreements
-        - `M` The data model
-        - `C` Creating a data model
-        - `M` Capturing and presenting data
+* Self-paced training
+    - Low-code App Builder (`M`odule | `C`hallenge)
+        * `C` Designing a case life cyle
+        * `M` User guidance
+        * `C` Setting case status
+        * `M` Completing work on time
+        * `C` Enforcing service-level agreements
+        * `M` The data model
+        * `C` Creating a data model
+        * `M` Capturing and presenting data
 
 ## Notes:
 
@@ -22,10 +22,10 @@
 
 #### Model data components
 
-* Fields
-    - Properties that store and format data in your application
-* Data objects
-    - Categories of data that have fields, field mappings, and connections to data sources
+- Fields
+    * Properties that store and format data in your application
+- Data objects
+    * Categories of data that have fields, field mappings, and connections to data sources
 
 #### Data storage
 
