--- a/2022/December/13.md
+++ b/2022/December/13.md
@@ -2,12 +2,12 @@
 
 ## Summary:
 
-- Daily standup
-    * quick quiz because of time constraint
-    * check module progression
-- Self-paced training
-    * Low-code App Builder (`M`odule | `C`hallenge)
-        - `C` Adding fields to view
-        - `MC` Creating a data relationship
-        - `MC` Routing assignments to user
-        - `MC` Designing an approval process
+* Daily standup
+    - quick quiz because of time constraint
+    - check module progression
+* Self-paced training
+    - Low-code App Builder (`M`odule | `C`hallenge)
+        * `C` Adding fields to view
+        * `MC` Creating a data relationship
+        * `MC` Routing assignments to user
+        * `MC` Designing an approval process
