--- a/2022/December/14.md
+++ b/2022/December/14.md
@@ -2,16 +2,16 @@
 
 ## Summary:
 
-- Self-paced training
-    * Low-code App Builder
-        - Send emails during case processing (Module & Challenge)
-        - Mission exercise
-        - Mission test
-    * Low-code App Builder Extended
-        - `M` Managing application development
-        - `C` Refining an agile workbench backlog
-        - `MC` Sizing a PEGA platform project
-        - `MC` Adding optional actions to workflow
-        - `MC` Automating workflow decisions
-        - `M` Automation shapes in the case life cycle
-        - `C` Attaching PDF files to a case
+* Self-paced training
+    - Low-code App Builder
+        * Send emails during case processing (Module & Challenge)
+        * Mission exercise
+        * Mission test
+    - Low-code App Builder Extended
+        * `M` Managing application development
+        * `C` Refining an agile workbench backlog
+        * `MC` Sizing a PEGA platform project
+        * `MC` Adding optional actions to workflow
+        * `MC` Automating workflow decisions
+        * `M` Automation shapes in the case life cycle
+        * `C` Attaching PDF files to a case
