--- a/2022/December/7.md
+++ b/2022/December/7.md
@@ -1,12 +1,12 @@
 # Work Diary (12/07/2022)
 
 ## Summary
-- Training
-    * customizing view in runtime
-    * picklist values
-    * grouping fields
-    * displaying list data
-    * translation/localization
-    * accessibility features
-    * simulating data
-    * integrating external data source (country flags)
+* Training
+    - customizing view in runtime
+    - picklist values
+    - grouping fields
+    - displaying list data
+    - translation/localization
+    - accessibility features
+    - simulating data
+    - integrating external data source (country flags)
