--- a/2022/December/8.md
+++ b/2022/December/8.md
@@ -2,17 +2,17 @@
 
 ## Summary:
 
-- Training
-    * configure security policies
-    * managing persona's application access
-    * guardrail compliance score
-    * auditing field values
-    * debugging applications using tracer
-    * testing application
-        - unit test
-        - scenario test
-    * training quizzes
-        - LCAB
-        - LCABE
-    * CSA Exam prep
-    * cheesecake with Steve
+* Training
+    - configure security policies
+    - managing persona's application access
+    - guardrail compliance score
+    - auditing field values
+    - debugging applications using tracer
+    - testing application
+        * unit test
+        * scenario test
+    - training quizzes
+        * LCAB
+        * LCABE
+    - CSA Exam prep
+    - cheesecake with Steve
