--- a/2022/December/9.md
+++ b/2022/December/9.md
@@ -2,12 +2,12 @@
 
 ## Summary:
 
-- Daily connect
-    * Training experience
-    * Core structure of the training with Steve
-    * Plans for the next weeks
-- Self-paced training
-    * Low-code App Builder (`M`odule | `C`hallenge)
-        - `M` Low-code defined
-        - `M` Defining a customer microjourney
-        - `M` PEGA UX Solutions
+* Daily connect
+    - Training experience
+    - Core structure of the training with Steve
+    - Plans for the next weeks
+* Self-paced training
+    - Low-code App Builder (`M`odule | `C`hallenge)
+        * `M` Low-code defined
+        * `M` Defining a customer microjourney
+        * `M` PEGA UX Solutions
