--- a/2022/December/15.md
+++ b/2022/December/15.md
@@ -2,15 +2,15 @@
 
 ## Summary:
 
-- Daily standup
-    * Created and submitted a question
-    * Menti quizzes
-        - Day 2 quizzes
-        - Batch 1's day 1-3 quizzes
-    * check module progression
-- Self-paced training
-    * Low-code App Builder Extended
-        - `MC` Creating a child case
-        - `MC` Identifying a duplicate case
-        - `MC` Pausing and resuming case processing
-- Lunch with Peter in Din tai fung
+* Daily standup
+    - Created and submitted a question
+    - Menti quizzes
+        * Day 2 quizzes
+        * Batch 1's day 1-3 quizzes
+    - check module progression
+* Self-paced training
+    - Low-code App Builder Extended
+        * `MC` Creating a child case
+        * `MC` Identifying a duplicate case
+        * `MC` Pausing and resuming case processing
+* Lunch with Peter in Din tai fung
