update file names

--- a/Notes/Low-code App Builder/[1.4] Completing work on time.md
+++ b/Notes/Low-code App Builder/[1.4] Completing work on time.md
@@ -55,7 +55,7 @@ In PEGA, work is prioritized based on urgency or deadline.
 
 Makes SLAs deadline-focused rather than urgency-focused.
 
-![Deadline prioritization](../resouces/../resources/deadline_prioritization.png)
+![Deadline prioritization](../resources/deadline_prioritization.png)
 
 ```mermaid
 flowchart LR
