--- a/Notes/[1] Low-code App Builder/[1.1] Low-code defined.md
+++ b/Notes/[1] Low-code App Builder/[1.1] Low-code defined.md
@@ -85,3 +85,8 @@ captures and presents user stories, bugs, and feedback items to support agile de
 ![Application Layer](../resources/application_layer.gif)
 
 > Note: The Application Layers widget presents a high-level summary of the contents of your application layers, not a complete inventory of your application.
+
+---
+<center>
+    <a href=[1.2]%20Defining%20a%20customer%20Microjourney.md>NEXT ➡️</a>
+</center>
