--- a/Notes/[1] Low-code App Builder/[1.2] Defining a customer Microjourney.md
+++ b/Notes/[1] Low-code App Builder/[1.2] Defining a customer Microjourney.md
@@ -179,3 +179,10 @@ Before an application can be released to production, draft mode must be turned o
 
 - App Studio displays a list of errors in your case type that you must resolve before draft mode is automatically turned off.
 - You can only manually turn off draft mode from Dev Studio.
+
+---
+<p align=center>
+    <a href=[1.1]%20Low-code%20defined.md>⬅️PREVIOUS</a>
+    |
+    <a href=[1.3]%20User%20guidance.md> NEXT➡️</a>
+</p>
