--- a/Notes/[1] Low-code App Builder/[1.3] User guidance.md
+++ b/Notes/[1] Low-code App Builder/[1.3] User guidance.md
@@ -30,3 +30,11 @@ If you set a cases status on a **stage**, PEGA automatically updates the case st
 - Add instructions to steps that require users to enter information.
 
 ![Step instructions](../resources/online-shopping-case-instructions-1.webp)
+
+---
+
+<p align=center>
+  <a href=[1.2]%20Defining%20a%20customer%20Microjourney.md>⬅️ PREVIOUS</a>
+  |
+  <a href=[1.4]%20Completing%20work%20on%20time.md>NEXT ➡️</a>
+</p>
