--- a/Notes/[1] Low-code App Builder/[1.10] Sending emails during case processing.md
+++ b/Notes/[1] Low-code App Builder/[1.10] Sending emails during case processing.md
@@ -72,3 +72,11 @@ In cases where the correspondence needs to be sent to one specific user in your 
 ### 2.1. Sending email notifications from cases
 
 Di ko alam pano gagawan ng reviewer to: [module reference](https://academy.pega.com/topic/additional-tasks-sending-email-during-case-processing/v3/in/29826/29936/30836)
+
+---
+
+<p align=center>
+  <a href=[1.9]%20Designing%20an%20approval%20process.md>⬅️PREVIOUS</a>
+  |
+  <a href=../[2]%20Low-code%20App%20Builder%20Extended/[2.1]%20Managing%20application%20development.md>NEXT➡️</a>
+</p>
