--- a/Notes/[1] Low-code App Builder/[1.5] The data model.md
+++ b/Notes/[1] Low-code App Builder/[1.5] The data model.md
@@ -100,3 +100,11 @@ provides a single location in App Studio for viewing all the data objects, data 
 ### 4.2. Integration Map
 
 A diagram of the data objects, cases, and systems of record in the application and where they are sourced.
+
+---
+
+<p align=center>
+  <a href=[1.4]%20Completing%20work%20on%20time.md>⬅️PREVIOUS</a>
+  |
+  <a href=[1.6]%20Capturing%20and%20presenting%20data.md>NEXT➡️</a>
+</p>
