--- a/Notes/[1] Low-code App Builder/[1.6] Capturing and presenting data.md
+++ b/Notes/[1] Low-code App Builder/[1.6] Capturing and presenting data.md
@@ -134,3 +134,11 @@ evaluate the value of one or more fields with a set of logical tests to return a
 - PEGA establishes and updates a network of calculations for an application
 - when you defined a calculated field, PEGA adds the calculated field the the calculation network
 - updates all relevant fields whenever a value changes
+
+---
+
+<p align=center>
+  <a href=[1.5]%20The%20data%20model.md>⬅️PREVIOUS</a>
+  |
+  <a href=[1.7]%20Creating%20a%20data%20relationship.md>NEXT➡️</a>
+</p>
