--- a/Notes/[1] Low-code App Builder/[1.7] Creating a data relationship.md
+++ b/Notes/[1] Low-code App Builder/[1.7] Creating a data relationship.md
@@ -138,3 +138,11 @@ Use an **Embedded data** field when data is sourced from a user interaction that
 >   <dd>reference data outside the case</dd>
 >   <dd>mostly used for savable data page</dd>
 > </dl>
+
+---
+
+<p align=center>
+  <a href=[1.6]%20Capturing%20and%20presenting%20data.md>⬅️PREVIOUS</a>
+  |
+  <a href=[1.8]%20Routing%20assignments%20to%20users.md>NEXT➡️</a>
+</p>
