--- a/Notes/[1] Low-code App Builder/[1.8] Routing assignments to users.md
+++ b/Notes/[1] Low-code App Builder/[1.8] Routing assignments to users.md
@@ -50,3 +50,11 @@ A **worklist** is a list of all open assignments, in order of importance, for a 
 - You can create multiple conditions
 
 <img src="../resources/business-logic.png" width=300>
+
+---
+
+<p align=center>
+  <a href=[1.7]%20Creating%20a%20data%20relationship.md>⬅️PREVIOUS</a>
+  |
+  <a href=[1.9]%20Designing%20an%20approval%20process.md>NEXT➡️</a>
+</p>
