--- a/Notes/[1] Low-code App Builder/[1.9] Designing an approval process.md
+++ b/Notes/[1] Low-code App Builder/[1.9] Designing an approval process.md
@@ -53,3 +53,11 @@ You can configure rejections to automatically:
 - change to a specific stage
 
 <img src="../resources/approve-reject.png" width=300>
+
+---
+
+<p align=center>
+  <a href=[1.8]%20Routing%20assignments%20to%20users.md>⬅️PREVIOUS</a>
+  |
+  <a href=[1.10]%20Sending%20emails%20during%20case%20processing.md>NEXT➡️</a>
+</p>
