--- a/Notes/[1] Low-code App Builder/[1.4] Completing work on time.md
+++ b/Notes/[1] Low-code App Builder/[1.4] Completing work on time.md
@@ -74,3 +74,11 @@ Configure SLAs escalation actions to:
 - notify the asighnee, manager, and participants
 - reassign task
 - resolve the case as the goal or deadlines occur
+
+---
+
+<p align=center>
+  <a href=[1.3]%20User%20guidance.md>⬅️PREVIOUS</a>
+  |
+  <a href=[1.5]%20The%20data%20model.md>NEXT➡️</a>
+</p>
