--- a/Notes/[2] Low-code App Builder Extended/[2.2] Sizing a PEGA Platform project.md
+++ b/Notes/[2] Low-code App Builder Extended/[2.2] Sizing a PEGA Platform project.md
@@ -1,9 +1,10 @@
-Sizing a PEGA project
+# Sizing a PEGA project
 
-- [1. Roles on a PEGA project](#1-roles-on-a-pega-project)
-    - [1.1. Project teams](#11-project-teams)
-    - [1.2. Overlap of role tasks](#12-overlap-of-role-tasks)
-- [2. The estimator tool](#2-the-estimator-tool)
+- [Sizing a PEGA project](#sizing-a-pega-project)
+    - [1. Roles on a PEGA project](#1-roles-on-a-pega-project)
+        - [1.1. Project teams](#11-project-teams)
+        - [1.2. Overlap of role tasks](#12-overlap-of-role-tasks)
+    - [2. The estimator tool](#2-the-estimator-tool)
 
 ## 1. Roles on a PEGA project
 
