--- a/Notes/[2] Low-code App Builder Extended/[2.7] Identifying duplicate cases.md
+++ b/Notes/[2] Low-code App Builder Extended/[2.7] Identifying duplicate cases.md
@@ -1,10 +1,11 @@
-Identifying duplicate cases
+# Identifying duplicate cases
 
-- [1. Duplicate search](#1-duplicate-search)
-    - [1.1. Duplicate cases](#11-duplicate-cases)
-    - [1.2. Search duplicate cases step](#12-search-duplicate-cases-step)
-    - [1.3. Customizations to the search duplicate step behavior](#13-customizations-to-the-search-duplicate-step-behavior)
-    - [1.4. Duplicate case analysis](#14-duplicate-case-analysis)
+- [Identifying duplicate cases](#identifying-duplicate-cases)
+    - [1. Duplicate search](#1-duplicate-search)
+        - [1.1. Duplicate cases](#11-duplicate-cases)
+        - [1.2. Search duplicate cases step](#12-search-duplicate-cases-step)
+        - [1.3. Customizations to the search duplicate step behavior](#13-customizations-to-the-search-duplicate-step-behavior)
+        - [1.4. Duplicate case analysis](#14-duplicate-case-analysis)
 
 ## 1. Duplicate search
 
