--- a/Notes/[2] Low-code App Builder Extended/[2.14] Customizing a portal content.md
+++ b/Notes/[2] Low-code App Builder Extended/[2.14] Customizing a portal content.md
@@ -95,3 +95,5 @@ You can also add, disable, or manage access to landing pages as well.
 - Add landing pages to an existing portal to effectively organize the content of your channel in a main menu.
 - Disable an existing landing page that is no longer needed to prevent users from adding the landing page to any menu. 
 - Manage access to landing pages by specifying visibility by role. For example, a landing page with employee reviews is visible to only a manager.
+
+> **Tip**: In App Studio, click Design to toggle Design mode, and then click Pages to access the Landing pages menu. The Landing pages menu lists both the pages you created and the Custom pages provided by Pega Platform. Disabled landing pages are not listed.
