--- a/Notes/[2] Low-code App Builder Extended/[2.11] Exploring application data with Insights.md
+++ b/Notes/[2] Low-code App Builder Extended/[2.11] Exploring application data with Insights.md
@@ -1,10 +1,11 @@
-Exploring application data with Insights
+# Exploring application data with Insights
 
-- [1. The Explore Data landing page](#1-the-explore-data-landing-page)
-    - [1.1. Insights](#11-insights)
-    - [1.2. Layout of the Explore Data landing page](#12-layout-of-the-explore-data-landing-page)
-        - [1.2.1. View or modify an insight](#121-view-or-modify-an-insight)
-        - [1.2.2. Create a chart from an insight](#122-create-a-chart-from-an-insight)
+- [Exploring application data with Insights](#exploring-application-data-with-insights)
+    - [1. The Explore Data landing page](#1-the-explore-data-landing-page)
+        - [1.1. Insights](#11-insights)
+        - [1.2. Layout of the Explore Data landing page](#12-layout-of-the-explore-data-landing-page)
+            - [1.2.1. View or modify an insight](#121-view-or-modify-an-insight)
+            - [1.2.2. Create a chart from an insight](#122-create-a-chart-from-an-insight)
 
 ## 1. The Explore Data landing page
 
