--- a/Notes/[2] Low-code App Builder Extended/[2.17] Calculating fields using decision tables.md
+++ b/Notes/[2] Low-code App Builder Extended/[2.17] Calculating fields using decision tables.md
@@ -1,8 +1,9 @@
-Calculating fields using decision tables
+# Calculating fields using decision tables
 
-- [1. Decision tables](#1-decision-tables)
-    - [1.1. Decision table logic](#11-decision-table-logic)
-    - [1.2. Decision tables in App Studio](#12-decision-tables-in-app-studio)
+- [Calculating fields using decision tables](#calculating-fields-using-decision-tables)
+    - [1. Decision tables](#1-decision-tables)
+        - [1.1. Decision table logic](#11-decision-table-logic)
+        - [1.2. Decision tables in App Studio](#12-decision-tables-in-app-studio)
 
 ## 1. Decision tables
 
