--- a/Notes/[2] Low-code App Builder Extended/[2.1] Managing application development.md
+++ b/Notes/[2] Low-code App Builder Extended/[2.1] Managing application development.md
@@ -218,3 +218,8 @@ You can start your DevOps journey by using the **Deployment Manager** and integr
 ## 3. Agile development best practices
 
 > Di ko alam pano gagawan ng reviewer to: [module reference](https://academy.pega.com/topic/agile-development-best-practices/v3/in/29826/29951/30466#p-32d36e3d-e0f6-4329-9688-c1e197c8c1a8)
+
+---
+<p align=center>
+    <a href="[2.1] Managing application development.md">NEXT ➡️</a>
+</p>
