update navigation links

--- a/Notes/[2] Low-code App Builder Extended/[2.10] Validating data against business logic.md
+++ b/Notes/[2] Low-code App Builder Extended/[2.10] Validating data against business logic.md
@@ -45,3 +45,10 @@
     > **Note**: When an error message is triggered on a stage validation, end users need to have the ability to update invalid data or perform an action, such as returning to a previous stage or closing the case. It is up to the developer to configure the functionality that allows end users to resolve the validation error.
 
 ![](../resources/case-validation.webp)
+
+---
+<p align=center>
+    <a href="[2.9] Pausing and resuming case processing.md">⬅️PREVIOUS</a>
+    |
+    <a href="[2.11] Exploring application data with insights.md"> NEXT➡️</a>
+</p>
