--- a/Notes/[2] Low-code App Builder Extended/[2.12] Gaining insight into business efficiency.md
+++ b/Notes/[2] Low-code App Builder Extended/[2.12] Gaining insight into business efficiency.md
@@ -163,3 +163,10 @@ PEGA populates and sorts standard reports into the following Public categories:
     - **Symbolic dates** let you select time periods or dates without having to build functions.
 - Sometimes you may need to create a more complex filter to capture multiple filtering conditions.
     - You can use multiple filters by adding AND/OR conditions. 
+
+---
+<p align=center>
+    <a href="[2.11] Exploring application data with insights.md">⬅️PREVIOUS</a>
+    |
+    <a href="[2.13] Customizing UI elements.md"> NEXT➡️</a>
+</p>
