--- a/Notes/[2] Low-code App Builder Extended/[2.13] Customizing UI elements.md
+++ b/Notes/[2] Low-code App Builder Extended/[2.13] Customizing UI elements.md
@@ -210,3 +210,10 @@ To optimize the actions and reduce the number of HTTP requests to the server, us
 By default, a **Refresh section** action sends all the pending changes applied to a form back to the server. There is no need to use a **Post value** action before a refresh section action, such as a **Refresh This Section** action.
 
 > **Note**: The Run activity, Run data transform, and Set value actions do not send the changes made to a form back to the server. If you want to pass some of the changes that are made on a form to an activity or a data transform, you need to pass them as parameters.
+
+---
+<p align=center>
+    <a href="[2.12] Gaining insights into business efficiency.md">⬅️PREVIOUS</a>
+    |
+    <a href="[2.14] Customizing a portal content.md"> NEXT➡️</a>
+</p>
