--- a/Notes/[2] Low-code App Builder Extended/[2.14] Customizing a portal content.md
+++ b/Notes/[2] Low-code App Builder Extended/[2.14] Customizing a portal content.md
@@ -97,3 +97,10 @@ You can also add, disable, or manage access to landing pages as well.
 - Manage access to landing pages by specifying visibility by role. For example, a landing page with employee reviews is visible to only a manager.
 
 > **Tip**: In App Studio, click Design to toggle Design mode, and then click Pages to access the Landing pages menu. The Landing pages menu lists both the pages you created and the Custom pages provided by Pega Platform. Disabled landing pages are not listed.
+
+---
+<p align=center>
+    <a href="[2.13] Customizing a UI element.md">⬅️PREVIOUS</a>
+    |
+    <a href="[2.15] Customizing a dashboard.md"> NEXT➡️</a>
+</p>
