--- a/Notes/[2] Low-code App Builder Extended/[2.15] Customizing a dashboard.md
+++ b/Notes/[2] Low-code App Builder Extended/[2.15] Customizing a dashboard.md
@@ -34,3 +34,10 @@ The default dashboard is assigned based on the user role.
 **Available templates**
 
 ![](../resources/dashboard-templates.webp)
+
+---
+<p align=center>
+    <a href="[2.14] Customizing a portal content.md">⬅️PREVIOUS</a>
+    |
+    <a href="[2.16] Designing a mobile app experience.md"> NEXT➡️</a>
+</p>
