--- a/Notes/[2] Low-code App Builder Extended/[2.16] Designing a mobile app experience.md
+++ b/Notes/[2] Low-code App Builder Extended/[2.16] Designing a mobile app experience.md
@@ -92,3 +92,10 @@ To ensure a consistent experience throughout the user workflow, define an applic
 ## 2. Additional tasks for designing a mobile app experience
 
 > Di ko alam pano gagawan ng reviewer to: [module reference](https://academy.pega.com/topic/additional-tasks-designing-mobile-app-experience/v3/in/29826/29951/30531)
+
+---
+<p align=center>
+    <a href="[2.15] Customizing a dashboard.md">⬅️PREVIOUS</a>
+    |
+    <a href="[2.17] Calculating fields using decision tables.md"> NEXT➡️</a>
+</p>
