--- a/Notes/[2] Low-code App Builder Extended/[2.17] Calculating fields using decision tables.md
+++ b/Notes/[2] Low-code App Builder Extended/[2.17] Calculating fields using decision tables.md
@@ -33,3 +33,10 @@ Decision tables are a good approach when you use a set of properties or expressi
 You can configure calculated fields using out-of-the-box basic functions and simple custom expressions in App Studio. 
 
 - For complex calculations which involve multiple conditions with varying results based on the conditions, you can configure a calculated field that references an existing or custom decision table.
+
+---
+<p align=center>
+    <a href="[2.16] Designing a mobile app experience.md">⬅️PREVIOUS</a>
+    |
+    <a href="[2.18] Inviting users to an application.md"> NEXT➡️</a>
+</p>
