--- a/Notes/[2] Low-code App Builder Extended/[2.18] Inviting users to an application.md
+++ b/Notes/[2] Low-code App Builder Extended/[2.18] Inviting users to an application.md
@@ -46,3 +46,9 @@ A **user** is an individual who interacts with an application.
 - In App Studio, create a new user with an email address and assign them a persona or developer role by clicking **Users > User management > People**.
 
 ![](../resources/user-management.png)
+
+---
+
+<p align=center>
+  <a href="[2.17] Calculating fields using decision tables">⬅️PREVIOUS</a>
+</p>
