--- a/Notes/[2] Low-code App Builder Extended/[2.1] Managing application development.md
+++ b/Notes/[2] Low-code App Builder Extended/[2.1] Managing application development.md
@@ -221,5 +221,5 @@ You can start your DevOps journey by using the **Deployment Manager** and integr
 
 ---
 <p align=center>
-    <a href="[2.1] Managing application development.md">NEXT ➡️</a>
+    <a href="[2.2] Sizing a PEGA Platform project.md">NEXT ➡️</a>
 </p>
