--- a/Notes/[2] Low-code App Builder Extended/[2.2] Sizing a PEGA Platform project.md
+++ b/Notes/[2] Low-code App Builder Extended/[2.2] Sizing a PEGA Platform project.md
@@ -101,3 +101,10 @@ To use the Estimator, you first need to define the main elements of your applica
 - You then assign the channels and data objects to a release to establish a rough estimate of the work planned for each release.
 
     > By default, PEGA provides four default releases: **MLP 1**, **MLP 2**, **MLP n**, and **Future**. The Application Profile also provides an **Unplanned** release option, which incorporates elements that do not have a release explicitly defined.
+
+---
+<p align=center>
+    <a href="[2.1] Managing application development.md">⬅️PREVIOUS</a>
+    |
+    <a href="[2.3] Adding optional actions to a workflow.md"> NEXT➡️</a>
+</p>
