--- a/Notes/[2] Low-code App Builder Extended/[2.3] Adding optional actions to a workflow.md
+++ b/Notes/[2] Low-code App Builder Extended/[2.3] Adding optional actions to a workflow.md
@@ -24,3 +24,10 @@ Optional actions are accessible at runtime from the **Actions** menu in the case
 You can add optional actions as **case-wide** or **stage-only** actions. If your action or process is only relevant in the context of a specific stage, configure the work as a stage-only action. PEGA provides some built-in case wide actions like **Change Stage** and **Transfer Assignment**.
 
 ![case-wide and stage-only](../resources/case-wide-stage-only.png)
+
+---
+<p align=center>
+    <a href="[2.2] Sizing a PEGA Platform proejct.md">⬅️PREVIOUS</a>
+    |
+    <a href="[2.4] Automating workflow decisions.md"> NEXT➡️</a>
+</p>
