--- a/Notes/[2] Low-code App Builder Extended/[2.4] Automating workflow decisions.md
+++ b/Notes/[2] Low-code App Builder Extended/[2.4] Automating workflow decisions.md
@@ -29,3 +29,10 @@
 - By defining the events that cause your flow to follow different paths, you can create cases that support more than one outcome.
 - Decision shapes are configured to advance a workflow automatically.
 - An automated decision evaluates business logic or a set of one or more conditions. 
+
+---
+<p align=center>
+    <a href="[2.3] Adding optional actions to a workflow.md">⬅️PREVIOUS</a>
+    |
+    <a href="[2.5] Automation shapes in the case life cycle.md"> NEXT➡️</a>
+</p>
