--- a/Notes/[2] Low-code App Builder Extended/[2.5] Automation shapes in the case life cycle.md
+++ b/Notes/[2] Low-code App Builder Extended/[2.5] Automation shapes in the case life cycle.md
@@ -34,3 +34,10 @@ The following table describes all automation shapes available in App Studio.
 | Search duplicate case | ![](../resources/shape-search-duplicate.png)     | Searches for duplicate cases using set conditions                                                    |
 | Wait                  | ![](../resources/shape-wait.png)                 | Pauses a case until a specified condition is fulfilled, such as timer or case status                 |
 | Questionnaire         | ![](../resources/shape-questionnaire.png)        | Asks the user to complete a questionnaire                                                            |
+
+---
+<p align=center>
+    <a href="[2.4] Automating workflow decisions.md">⬅️PREVIOUS</a>
+    |
+    <a href="[2.6] Creating child case.md"> NEXT➡️</a>
+</p>
