--- a/Notes/[2] Low-code App Builder Extended/[2.6] Creating a child case.md
+++ b/Notes/[2] Low-code App Builder Extended/[2.6] Creating a child case.md
@@ -33,3 +33,10 @@ Complex business transactions require the creation of multiple cases. In PEGA yo
 
 - If the data in the child case should represent the data at the time of the child case creation, data propagation is appropriate.
 - If the information should remain synchronized with the parent case, and the data may change on the parent case, then it is more appropriate to reference the data in the parent case.
+
+---
+<p align=center>
+    <a href="[2.5] Automation shapes in the case life cycle.md">⬅️PREVIOUS</a>
+    |
+    <a href="[2.7] Identifying duplicate case.md"> NEXT➡️</a>
+</p>
