--- a/Notes/[2] Low-code App Builder Extended/[2.7] Identifying duplicate cases.md
+++ b/Notes/[2] Low-code App Builder Extended/[2.7] Identifying duplicate cases.md
@@ -44,3 +44,10 @@ In the example of the health care services application,
 3. The system displays the case entered on March 18 as a duplicate because the date of birth, surgeon name, surgical type, procedure date, and procedure match the values in the original case, and because the **total weighted condition** value is `100`, exceeding the matching **threshold** of `50`. 
 4. The user decides that the second request is a duplicate and resolves the case as **Resolved-Duplicate**.
 5. The user then continues with the initial case and provides the hospital administrator with the original authorization code.
+
+---
+<p align=center>
+    <a href="[2.6] Creating a child case.md">⬅️PREVIOUS</a>
+    |
+    <a href="[2.8] Skipping a process or a stage.md"> NEXT➡️</a>
+</p>
