--- a/Notes/[2] Low-code App Builder Extended/[2.8] Skipping a process or a stage.md
+++ b/Notes/[2] Low-code App Builder Extended/[2.8] Skipping a process or a stage.md
@@ -50,3 +50,10 @@ In the case life cycle, select the process of interest to configure a condition 
 ### 1.3. Building conditions
 
 You can add more than one condition to a stage or process. 
+
+---
+<p align=center>
+    <a href="[2.7] Identifying duplicate cases.md">⬅️PREVIOUS</a>
+    |
+    <a href="[2.9] Skipping a process or a stage.md"> NEXT➡️</a>
+</p>
