--- a/Notes/[2] Low-code App Builder Extended/[2.9] Pausing and resuming case processing.md
+++ b/Notes/[2] Low-code App Builder Extended/[2.9] Pausing and resuming case processing.md
@@ -45,3 +45,10 @@ The Timer wait type pauses a case until the **Set date/time interval** expires o
 ### 1.2. Wait step versus user action
 
 It is important to recognize the distinction between **deliberately pausing a case by inserting a Wait step**, and **delays in case processing that occur while awaiting user action** on assignment steps that must be completed before a case can proceed. 
+
+---
+<p align=center>
+    <a href="[2.8] Skipping a process or a stage.md">⬅️PREVIOUS</a>
+    |
+    <a href="[2.10] Validating data against business logic.md"> NEXT➡️</a>
+</p>
