--- a/Notes/[2] Low-code App Builder Extended/[2.11] Exploring application data with Insights.md
+++ b/Notes/[2] Low-code App Builder Extended/[2.11] Exploring application data with Insights.md
@@ -104,3 +104,10 @@ On the Explore Data landing page, you can create charts from an insight to visua
     <dd>Drag <strong>fields</strong> from the <strong>Fields</strong> pane and drop them to the <strong>Measures</strong>, <strong>Dimensions</strong>, and <strong>Filters</strong> boxes in the <strong>Data</strong> tab.</dd></dl>
 
     ![](../resources/insights-chart-field.png)
+
+---
+<p align=center>
+    <a href="[2.10] Validating data against business logic.md">⬅️PREVIOUS</a>
+    |
+    <a href="[2.12] Gaining insights into business efficiency.md"> NEXT➡️</a>
+</p>
