fix navigation links

--- a/Notes/[2] Low-code App Builder Extended/[2.5] Automation shapes in the case life cycle.md
+++ b/Notes/[2] Low-code App Builder Extended/[2.5] Automation shapes in the case life cycle.md
@@ -39,5 +39,5 @@ The following table describes all automation shapes available in App Studio.
 <p align=center>
     <a href="[2.4] Automating workflow decisions.md">⬅️PREVIOUS</a>
     |
-    <a href="[2.6] Creating child case.md"> NEXT➡️</a>
+    <a href="[2.6] Creating a child case.md"> NEXT➡️</a>
 </p>
