fix navigation links

--- a/Notes/[2] Low-code App Builder Extended/[2.6] Creating a child case.md
+++ b/Notes/[2] Low-code App Builder Extended/[2.6] Creating a child case.md
@@ -38,5 +38,5 @@ Complex business transactions require the creation of multiple cases. In PEGA yo
 <p align=center>
     <a href="[2.5] Automation shapes in the case life cycle.md">⬅️PREVIOUS</a>
     |
-    <a href="[2.7] Identifying duplicate case.md"> NEXT➡️</a>
+    <a href="[2.7] Identifying duplicate cases.md"> NEXT➡️</a>
 </p>
