fix navigation links

--- a/Notes/[2] Low-code App Builder Extended/[2.8] Skipping a process or a stage.md
+++ b/Notes/[2] Low-code App Builder Extended/[2.8] Skipping a process or a stage.md
@@ -55,5 +55,5 @@ You can add more than one condition to a stage or process.
 <p align=center>
     <a href="[2.7] Identifying duplicate cases.md">⬅️PREVIOUS</a>
     |
-    <a href="[2.9] Skipping a process or a stage.md"> NEXT➡️</a>
+    <a href="[2.9] Pausing and resuming case processing.md"> NEXT➡️</a>
 </p>
