fix navigation links

--- a/Notes/[2] Low-code App Builder Extended/[2.10] Validating data against business logic.md
+++ b/Notes/[2] Low-code App Builder Extended/[2.10] Validating data against business logic.md
@@ -50,5 +50,5 @@
 <p align=center>
     <a href="[2.9] Pausing and resuming case processing.md">⬅️PREVIOUS</a>
     |
-    <a href="[2.11] Exploring application data with insights.md"> NEXT➡️</a>
+    <a href="[2.11] Exploring application data with Insights.md"> NEXT➡️</a>
 </p>
