--- a/Notes/[2] Low-code App Builder Extended/[2.12] Gaining insight into business efficiency.md
+++ b/Notes/[2] Low-code App Builder Extended/[2.12] Gaining insight into business efficiency.md
@@ -166,7 +166,7 @@ PEGA populates and sorts standard reports into the following Public categories:
 
 ---
 <p align=center>
-    <a href="[2.11] Exploring application data with insights.md">⬅️PREVIOUS</a>
+    <a href="[2.11] Exploring application data with Insights.md">⬅️PREVIOUS</a>
     |
     <a href="[2.13] Customizing UI elements.md"> NEXT➡️</a>
 </p>
