fix navigation links

--- a/Notes/[2] Low-code App Builder Extended/[2.11] Exploring application data with Insights.md
+++ b/Notes/[2] Low-code App Builder Extended/[2.11] Exploring application data with Insights.md
@@ -109,5 +109,5 @@ On the Explore Data landing page, you can create charts from an insight to visua
 <p align=center>
     <a href="[2.10] Validating data against business logic.md">⬅️PREVIOUS</a>
     |
-    <a href="[2.12] Gaining insights into business efficiency.md"> NEXT➡️</a>
+    <a href="[2.12] Gaining insight into business efficiency.md"> NEXT➡️</a>
 </p>
