--- a/Notes/[2] Low-code App Builder Extended/[2.13] Customizing UI elements.md
+++ b/Notes/[2] Low-code App Builder Extended/[2.13] Customizing UI elements.md
@@ -213,7 +213,7 @@ By default, a **Refresh section** action sends all the pending changes applied t
 
 ---
 <p align=center>
-    <a href="[2.12] Gaining insights into business efficiency.md">⬅️PREVIOUS</a>
+    <a href="[2.12] Gaining insight into business efficiency.md">⬅️PREVIOUS</a>
     |
     <a href="[2.14] Customizing a portal content.md"> NEXT➡️</a>
 </p>
