fix navigation links

--- a/Notes/[2] Low-code App Builder Extended/[2.18] Inviting users to an application.md
+++ b/Notes/[2] Low-code App Builder Extended/[2.18] Inviting users to an application.md
@@ -50,5 +50,5 @@ A **user** is an individual who interacts with an application.
 ---
 
 <p align=center>
-  <a href="[2.17] Calculating fields using decision tables">⬅️PREVIOUS</a>
+  <a href="[2.17] Calculating fields using decision tables.md">⬅️PREVIOUS</a>
 </p>
