fix navigation links

--- a/Notes/[2] Low-code App Builder Extended/[2.14] Customizing a portal content.md
+++ b/Notes/[2] Low-code App Builder Extended/[2.14] Customizing a portal content.md
@@ -100,7 +100,7 @@ You can also add, disable, or manage access to landing pages as well.
 
 ---
 <p align=center>
-    <a href="[2.13] Customizing a UI element.md">⬅️PREVIOUS</a>
+    <a href="[2.13] Customizing UI elements.md">⬅️PREVIOUS</a>
     |
     <a href="[2.15] Customizing a dashboard.md"> NEXT➡️</a>
 </p>
