fix navigation links

--- a/Notes/[2] Low-code App Builder Extended/[2.3] Adding optional actions to a workflow.md
+++ b/Notes/[2] Low-code App Builder Extended/[2.3] Adding optional actions to a workflow.md
@@ -27,7 +27,7 @@ You can add optional actions as **case-wide** or **stage-only** actions. If your
 
 ---
 <p align=center>
-    <a href="[2.2] Sizing a PEGA Platform proejct.md">⬅️PREVIOUS</a>
+    <a href="[2.2] Sizing a PEGA Platform project.md">⬅️PREVIOUS</a>
     |
     <a href="[2.4] Automating workflow decisions.md"> NEXT➡️</a>
 </p>
